--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
 <body>
     <div class="width">
         <header class="header">
-            <h1><a href="main.html">Welcome to My Website</a></h1>
+            <h1><a href="index.html">Welcome to My Website</a></h1>
             <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
                 <li><a href="connect.html">Connect</a></li>
